# astercube

./: CHANGELOG.txt  CMakeLists.txt  README.txt  astercubewriteup.odt  clean.sh  compile.sh
assimpopengl/: .~lock.assimpopengl.odt#  CHANGELOG.txt  CMakeLists.txt  README.txt  assimpopengl.odt
assimpopengl/LGPL/: notice.txt  notice.txt~
assimpopengl/include/: CMakeLists.txt  assimpopengl.h  camera.h  commonheader.h  commonheader.h~  createimage.h  createimage.h~  info.h  mesh.h  mesh.h~  meshtex.h  meshtex.h~  meshvert.h  meshvert.h~  model.h  model.h~  shader.h  shader.h~  smokecloud.h  uniformprinter.h
assimpopengl/src/: CMakeLists.txt  Makefile  camera.cpp  cmake_install.cmake  createimage.cpp  mesh.cpp  meshtex.cpp  meshvert.cpp  model.cpp  shader.cpp  smokecloud.cpp  uniformprinter.cpp
include/: astercube.h  asterobject.h  commonheader.h  objects.h  skybox.h  terrain.h
openglresources/asteroids/: asteroid1.blend  asteroid1.blend1  asteroid1.mtl  asteroid2.blend  asteroid2.blend1  asteroid2.mtl  asteroid3.blend  asteroid3.blend1  asteroid3.mtl  asteroid4.blend  asteroid4.blend1  asteroid4.mtl  asteroid5.blend  asteroid5.blend1  asteroid5.mtl  asteroid6.blend  asteroid6.blend1  asteroid6.mtl
openglresources/objects/: bugel.blend  carafe.blend  carafe.blend1  dice.blend  monkey.blend  monkey.blend1  winebottleglass.blend  wineglass.blend  wineglass.blend1
openglresources/objects/images/: spaceship.blend
openglresources/objects/images/simpleship/: Sample_Ship.blend  Sample_Ship.blend1
openglresources/shaders/: asteroids.frag  asteroids.vs  cloud.frag  cloud.vs  diffspecbinorm.frag  diffspecbinorm.vs  explode.frag  explode.vs  floor.frag  floor.vs  skyboxshader.frag  skyboxshader.vs  test.frag  test.vs  test2.frag  test2.vs
openglresources/skyboxes/ely_hills/: hills_up.tga
openglresources/skyboxes/ely_nevada/: nevada_up.tga
openglresources/skyboxes/hw_glacier/: glacier_dn.tga  glacier_up.tga  hw_glacier.shader
openglresources/skyboxes/hw_jungle/: hw_jungle.shader  jungle_bk.tga  jungle_dn.tga  jungle_ft.tga  jungle_lf.tga  jungle_rt.tga  jungle_up.tga
openglresources/skyboxes/mp_drakeq/: drakeq_dn.tga  drakeq_up.tga
src/: CMakeLists.txt  astercube.cpp  asterobject.cpp  objects.cpp  skybox.cpp  terrain.cpp
